Primeras modificaciones del HTML
primeros cambios en el archivo html de UNDUM

--- a/games/Practica2.html
+++ b/games/Practica2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- Game Title: edit this -->
-    <title>Undum</title>
+    <title>Practica 2 - Diego Barrales Castillo</title>
     <!-- End of Game Title -->
 
     <!-- Remove this if you don't use the Tangerine font in your
@@ -34,7 +34,7 @@
     <div id="toolbar">
       <!-- Set this to be a small version of the title, for the
            toolbar on mobile devices. -->
-      <h1>Undum</h1>
+      <h1>Salir de casa</h1>
       <div class="nav">
         <a href="#" class="button" id="menu-button">Menu</a>
       </div>
@@ -51,7 +51,7 @@
         <div id="info_panel" class="tools left">
 
           <!-- Game Background: edit this -->
-          <h1>Undum</h1>
+          <h1>Fondo izquierda</h1>
           <p>
             Undum is a pure client-side game framework for narrative
             interactive fiction. It is designed for HTML&#x200A;5 and
@@ -61,7 +61,7 @@
           <!-- End of Game Background -->
 
           <div class='buttons'>
-            <button id="save">Save</button><button id="erase">Erase</button>
+            <button id="save">Guardar</button><button id="erase">Borrar</button>
           </div>
         </div>
 
@@ -81,14 +81,13 @@
           <div class="label">
 
             <!-- Game Title: edit this -->
-            <h1>The Undum Tutorial <span class='fancy'>&amp;</span><br>
-              Interactive Example</h1>
-            <h2>by I D Millington</h2>
+            <h1>TITULO</h1>
+            <h2>hecho por Diego Barrales Castillo</h2>
             <!-- End of Game Title -->
 
-            <noscript><p class="noscript_message">This game requires 
+            <noscript><p class="noscript_message">This game requires
               Javascript.</p></noscript>
-            <p class="click_message">click to begin</p>
+            <p class="click_message">Pulsa aquí para comenzar</p>
           </div>
         </div>
 
@@ -102,9 +101,6 @@
           <!-- Your Copyright: edit this -->
           <p>Content and additional software and design &copy; 2010 IDM.</p>
           <!-- End of Your Copyright -->
-
-          <!-- This line is totally optional. -->
-          <p>Created with <a href="http://idmillington.github.io/undum/">Undum</a>.</p>
         </div>
       </div>
     </div> <!-- End of div.page -->
@@ -196,9 +192,8 @@
       <!-- Some situations defined entirely in the HTML -->
       <div id="hub" class="situation" data-choices="#topic"
            data-option-text="View Topic List">
-        <h1 class="transient">Topics</h1>
-        <p class="transient">Choose a topic to find out about next. If
-          in doubt, go through the topics in order.</p>
+        <h1 class="transient">Decisión</h1>
+        <p class="transient">Elige una de las decisiones a tomar:</p>
       </div>
 
       <div id="implicit" class="situation" data-tags="topic"
@@ -242,6 +237,6 @@
 
     <!-- Change the name of this file. It is your main game file. -->
     <script type="text/javascript"
-            src="media/games/tutorial/tutorial.game.en.js"></script>
+            src="media/games/tutorial/Practica2.game.es.js"></script>
   </body>
 </html>
