Cambios esteticos + otras cosas
cambios estéticos y otros pequeños cambios

--- a/games/Practica2.html
+++ b/games/Practica2.html
@@ -34,7 +34,7 @@
     <div id="toolbar">
       <!-- Set this to be a small version of the title, for the
            toolbar on mobile devices. -->
-      <h1>Salir de casa</h1>
+      <h1>Compra eterna</h1>
       <div class="nav">
         <a href="#" class="button" id="menu-button">Menu</a>
       </div>
@@ -53,10 +53,7 @@
           <!-- Game Background: edit this -->
           <h1>Fondo izquierda</h1>
           <p>
-            Undum is a pure client-side game framework for narrative
-            interactive fiction. It is designed for HTML&#x200A;5 and
-            CSS&#x200A;3. You can read more and download the source
-            code <a href="http://github.com/idmillington/undum">here</a>.
+            Debes tomar las deciones que consideres idóneas para poder realizar el recado de forma satisfactoria.
           </p>
           <!-- End of Game Background -->
 
@@ -66,7 +63,7 @@
         </div>
 
         <div id="character_panel" class="tools right">
-          <h1>Character</h1>
+          <h1>Personaje</h1>
           <div id="character">
             <div id="character_text">
               <div id="character_text_content"></div>
@@ -81,8 +78,8 @@
           <div class="label">
 
             <!-- Game Title: edit this -->
-            <h1>TITULO</h1>
-            <h2>hecho por Diego Barrales Castillo</h2>
+            <h1>Tarta de zanahoria <span class='fancy'></h1>
+            <h2>por: Diego Barrales Castillo</h2>
             <!-- End of Game Title -->
 
             <noscript><p class="noscript_message">This game requires
@@ -99,7 +96,7 @@
 
         <div id="legal">
           <!-- Your Copyright: edit this -->
-          <p>Content and additional software and design &copy; 2010 IDM.</p>
+          <p>Desarrollo ágil - Práctica 2 </p>
           <!-- End of Your Copyright -->
         </div>
       </div>
