Mitad del juego
Juego a medio completar

--- a/games/Practica2.html
+++ b/games/Practica2.html
@@ -34,7 +34,7 @@
     <div id="toolbar">
       <!-- Set this to be a small version of the title, for the
            toolbar on mobile devices. -->
-      <h1>Compra eterna</h1>
+      <h1>Tarta de zanahoria</h1>
       <div class="nav">
         <a href="#" class="button" id="menu-button">Menu</a>
       </div>
@@ -51,9 +51,11 @@
         <div id="info_panel" class="tools left">
 
           <!-- Game Background: edit this -->
-          <h1>Fondo izquierda</h1>
+          <h1>Objetivo</h1>
           <p>
-            Debes tomar las deciones que consideres idóneas para poder realizar el recado de forma satisfactoria.
+            Tu madre te manda ir al supermercado porque necesita ingredientes para hacer una tarta de
+            zanahoria para el cumpleaños de tu hermano, que es al día siguiente.
+            Si no tomas las decisiones correctas puede que alguien te odie para siempre.
           </p>
           <!-- End of Game Background -->
 
@@ -79,12 +81,12 @@
 
             <!-- Game Title: edit this -->
             <h1>Tarta de zanahoria <span class='fancy'></h1>
-            <h2>por: Diego Barrales Castillo</h2>
+            <h2>Diego Barrales Castillo</h2>
             <!-- End of Game Title -->
 
             <noscript><p class="noscript_message">This game requires
               Javascript.</p></noscript>
-            <p class="click_message">Pulsa aquí para comenzar</p>
+            <p style="color:white" class="click_message">Pulsa aquí para comenzar</p>
           </div>
         </div>
 
@@ -96,7 +98,7 @@
 
         <div id="legal">
           <!-- Your Copyright: edit this -->
-          <p>Desarrollo ágil - Práctica 2 </p>
+          <p>Desarrollo ágil - Práctica 2 - Diego Barrales Castillo</p>
           <!-- End of Your Copyright -->
         </div>
       </div>
